--- a/My_Theme_Collection/CleanGreenForest.theme.css
+++ b/My_Theme_Collection/CleanGreenForest.theme.css
@@ -1,4 +1,9 @@
-//META{"name":"Clean_Green_Forest_1","description":"This is my first New Theme","author":"DevilsLynAvenged","version":"1"}*//{}
+/**
+ * @name Clean Green Forest 
+ * @author ShadowDevilsAvenged
+ * @description This is my first New Theme
+ * @version 4
+ */
 #app-mount .app-2rEoOp {
   background-image: url(https://images7.alphacoders.com/835/835311.jpg);
   background-size: cover;
@@ -98,7 +103,8 @@
   color: silver;
 }
 .theme-dark .cardPrimary-1Hv-to,
-.theme-dark .cardPrimaryEditable-3KtE4g {
+.theme-dark .item-26Dhrx,
+.theme-dark .item-26Dhrx:hover {
   background: rgba(0, 0, 0, 0.4);
   border-color: black;
 }
@@ -220,28 +226,63 @@
   color: #fff!important;
 }
 
+.cozy-3raOZG .repliedMessage-VokQwo {
+  margin-bottom: var(--reply-spacing);
+}
+
+.repliedMessage-VokQwo {
+--reply-spacing: 10px;
+}
+
+.repliedTextPreview-2NBljf {
+  overflow: visible;
+  margin-bottom: 20px;
+}
+
 .tabBar-ZmDY9v .item-3HknzM[style*="background-color: rgba(67, 181, 129, 0.2); color: rgb(67, 181, 129);"] {
   background-color: #149300!important;
   color: white!important;
   border: 1px solid rgba(255, 255, 255, 0.45);
 }
 
-.themeDefault-24hCdX.valueChecked-m-4IJZ,
+/* Regular Switch Deactivated */
+.container-3auIfb {
+	border-radius: 5px;
+	background-color: #04820C !important;
+}
+
+.container-3auIfb rect {
+	fill: red;
+	rx: 5;
+}
+.container-3auIfb path {
+	fill: white;
+}
+/* Regular Switch Deactivated */
+
+
+/* Regular Switch Activated */
+.container-3auIfb[style*="background-color: rgb(67, 181, 129);"] {
+	background-color: #129b1a !important;
+}
+.container-3auIfb[style*="background-color: rgb(67, 181, 129);"] rect {
+	fill: #11df3d;
+	rx: 5;
+}
+.container-3auIfb[style*="background-color: rgb(67, 181, 129);"] path {
+	fill: white;
+}
+/* Regular Switch Activated */
+
 .bd-switch-checked {
   background-color: #129b1a;
 }
-.themeDefault-24hCdX.sizeDefault-2YlOZr {
-  box-shadow: none;
-}
-.sizeDefault-2YlOZr,
 .bd-switch {
   border-radius: 5px;
 }
-.themeDefault-24hCdX,
 .bd-switch {
   background-color: #04820C;
 }
-.sizeDefault-2YlOZr:after,
 .bd-switch::after {
   border-radius: 5px;
 }
@@ -353,6 +394,31 @@
   color: white;
 }
 
+.theme-dark .popout-VcNcHB {
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+.selectedIcon-3uS11H {
+	color: rgba(0, 0, 0, .6);
+	width: 23px;
+	height: 23px;
+}
+  
+.lookFilled-22uAsw.select-2fjwPw {
+  background-color: black;
+  border-color: #129b1a;
+}
+
+.option-3KoAJB[aria-selected=true] {
+	color: white;
+	background-color: #129b1a !important;
+}
+
+.option-3KoAJB:focus, .option-3KoAJB:hover {
+	background-color: #04820C;
+	color: white;
+}
+
 .theme-dark .userSettingsVoice-iwdUCU .previewOverlay-2O7_KC {
   background-color: transparent;
   border-color: transparent;
@@ -406,9 +472,17 @@
   border: none;
 }
 
-.theme-dark .cardPrimaryEditable-3KtE4g[style*="border-color: rgb(114, 137, 218); background-color: rgb(114, 137, 218);"] {
+.item-26Dhrx[aria-checked=true] {
   background: #129b1a !important;
   border-color: black !important;
+}
+
+.radioBar-bMNUI- path[fill] {
+	fill: #3bd845;
+}
+.radioIconForeground-XwlXQN {
+	color: white;
+	r:7;
 }
 
 .theme-dark .checked-3_4uQ9[style*="border-color: rgb(114, 137, 218);"] {
@@ -886,7 +960,7 @@
   border: 2px solid #4f5fe0;
 }
 .lookInverted-2D7oAl.colorBrand-3pXr91:hover {
-  background-color: #4f5fe0;
+  background-color: #4f5fe0 !important;
 }
 .lookInverted-2D7oAl.colorBrand-3pXr91 {
   color: white !important;
@@ -1178,7 +1252,8 @@
 }
 
 .theme-dark .jumpToPresentBar-G1R9s6,
-.theme-dark .newMessagesBar-265mhP button {
+.theme-dark .newMessagesBar-265mhP button, 
+.container-2fRDfG {
   background-color: rgba(0,0,0,.9) !important;
 }
 
@@ -1329,9 +1404,12 @@
   border-left: none;
 }
 
-.colorDefault-2K3EoJ .checkbox-3s5GYZ, 
-.colorDefault-2K3EoJ .radioSelection-1HmrQS {
+.colorDefault-2K3EoJ .checkbox-3s5GYZ {
   color: rgba(0, 0, 0, .26) !important;
+}
+
+.colorDefault-2K3EoJ .radioSelection-1HmrQS {
+	color: #129b1a !important;
 }
 
 .colorDefault-2K3EoJ.focused-3afm-j .check-1JyqgN {
@@ -2086,3 +2164,47 @@
 /* Hover Color: #04820C - 4, 130, 12 */
 
 
+/* New Things Here */
+.tip-2ab612 {
+	opacity: 1;
+}
+.colorStandard-2KCXvj, .actionButton-uPB8Fs, .header-19cWci, .theme-dark .activityIcon-c4ew_N {
+	color: white;
+}
+
+.background-1QDuV2, .accountList-33MS45, .connection-1fbD7X {
+	background-color: rgba(0, 0, 0, .4);
+}
+
+.fieldList-21DyL8, .connectionHeader-2MDqhu, .integration-3kMeY4 {
+	background-color: transparent;
+}
+
+.phoneField-38N1bJ {
+	background-color: transparent;
+	border: none;
+}
+
+.phoneField-38N1bJ .inputField-aNPXsv {
+	background-color: transparent;
+	color: white;
+}
+
+.bda-slist .bda-footer button[style*="background-color: rgb(114, 137, 218);"] {
+	background: #129b1a !important;
+}
+
+.channelName-1JRO3C {
+	color: white;
+	background: transparent;
+}
+
+.searchResultMessage-1fxgXh.hit-1fVM9e {
+	box-shadow: none;
+	background-color: rgba(255,255,255,.2);
+}
+
+.integration-3kMeY4 {
+  background-color: transparent;
+}
+/* New Things Here */
