--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -1,8 +1,38 @@
-//META{"name":"The_Great_Mountain_Site","description":"Enjoy the great sight of the mountain","author":"DevilsLynAvenged","version":"1"}*//{}
+/**
+ * @name The Great Mountain Site
+ * @author ShadowDevilsAvenged
+ * @description Enjoy the great sight of the mountain 
+ * @version 4
+ */
 #app-mount .app-2rEoOp {
   background-image: url(https://images4.alphacoders.com/102/1029784.jpg);
   background-size: cover;
 } 
+
+@keyframes colorOpacity {
+  0% {background-color: rgba(202, 158, 115, 0)}
+  25% {background-color: rgba(202, 158, 115, .5)}
+  50% {background-color: rgb(202, 158, 115)}
+  75% {background-color: rgba(202, 158, 115, .5)}
+  100% {background-color: rgba(202, 158, 115, 0)}
+}
+
+
+.backgroundFlash-24qWLN[style*="background-color: rgba(114, 137, 218, 0);"] {
+  animation: colorOpacity .8s ease-in 0s 1 normal forwards;
+}
+
+.backgroundFlash-24qWLN[style*="background-color: rgba(114, 137, 218, 0.196);"],
+.backgroundFlash-24qWLN[style*="background-color: rgba(114, 137, 218, 0.014);"],
+.backgroundFlash-24qWLN[style*="background-color: rgba(114, 137, 218, 0.118);"],
+.backgroundFlash-24qWLN[style*="background-color: rgba(114, 137, 218, 0.184);"],
+.backgroundFlash-24qWLN[style*="background-color: rgba(114, 137, 218, 0.2);"],
+.backgroundFlash-24qWLN[style*="background-color: rgba(114, 137, 218, 0.192);"],
+.backgroundFlash-24qWLN[style*="background-color: rgba(114, 137, 218, 0.182);"],
+.backgroundFlash-24qWLN[style*="background-color:rgba(114, 137, 218, 0.047)"] {
+  background-color: rgba(202, 158, 115, .5) !important;
+}
+
 
 .slateTextArea-1Mkdgw {
   caret-color: white;
@@ -94,7 +124,8 @@
   color: silver;
 }
 .theme-dark .cardPrimary-1Hv-to,
-.theme-dark .cardPrimaryEditable-3KtE4g {
+.theme-dark .item-26Dhrx,
+.theme-dark .item-26Dhrx:hover {
   background: rgba(0, 0, 0, 0.4);
   border-color: black;
 }
@@ -131,6 +162,19 @@
 .input-cIJ7To {
   border-style: solid;
   border-radius: 11px;
+}
+
+.cozy-3raOZG .repliedMessage-VokQwo {
+  margin-bottom: var(--reply-spacing);
+}
+
+.repliedMessage-VokQwo {
+--reply-spacing: 10px;
+}
+
+.repliedTextPreview-2NBljf {
+  overflow: visible;
+  margin-bottom: 20px;
 }
 
 .theme-dark .divider-3573oO {
@@ -224,28 +268,50 @@
   border: 1px solid rgba(255, 255, 255, 0.45);
 }
 
-.themeDefault-24hCdX.valueChecked-m-4IJZ,
 .bd-switch-checked {
   background-color: #ca9e73;
 }
-.themeDefault-24hCdX.sizeDefault-2YlOZr {
-  box-shadow: none;
-}
-.sizeDefault-2YlOZr,
 .bd-switch {
   border-radius: 5px;
 }
-.themeDefault-24hCdX,
 .bd-switch {
   background-color: #d59e68;
 }
-.sizeDefault-2YlOZr:after,
 .bd-switch::after {
   border-radius: 5px;
 }
 .theme-dark .checkbox-1ix_J3 {
   border-color: rgba(255, 255, 255, 0.35);
 }
+
+/* Regular Switch Deactivated */
+.container-3auIfb {
+	border-radius: 5px;
+	background-color: #d59e68 !important;
+}
+
+.container-3auIfb rect {
+	fill: red;
+	rx: 5;
+}
+.container-3auIfb path {
+	fill: white;
+}
+/* Regular Switch Deactivated */
+
+
+/* Regular Switch Activated */
+.container-3auIfb[style*="background-color: rgb(67, 181, 129);"] {
+	background-color: #ca9e73 !important;
+}
+.container-3auIfb[style*="background-color: rgb(67, 181, 129);"] rect {
+	fill: #11df3d;
+	rx: 5;
+}
+.container-3auIfb[style*="background-color: rgb(67, 181, 129);"] path {
+	fill: white;
+}
+/* Regular Switch Activated */
 
 .box-mmYMsp {
   border-radius: 7px;
@@ -351,6 +417,31 @@
   color: white;
 }
 
+.theme-dark .popout-VcNcHB {
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+.selectedIcon-3uS11H {
+	color: rgba(0, 0, 0, .6);
+	width: 23px;
+	height: 23px;
+}
+  
+.lookFilled-22uAsw.select-2fjwPw {
+  background-color: black;
+  border-color: #ca9e73;
+}
+
+.option-3KoAJB[aria-selected=true] {
+	color: white;
+	background-color: #ca9e73 !important;
+}
+
+.option-3KoAJB:focus, .option-3KoAJB:hover {
+	background-color: #d59e68;
+	color: white;
+}
+
 .theme-dark .userSettingsVoice-iwdUCU .previewOverlay-2O7_KC {
   background-color: transparent;
   border-color: transparent;
@@ -404,9 +495,17 @@
   border: none;
 }
 
-.theme-dark .cardPrimaryEditable-3KtE4g[style*="border-color: rgb(114, 137, 218); background-color: rgb(114, 137, 218);"] {
+.item-26Dhrx[aria-checked=true] {
   background: #ca9e73 !important;
   border-color: black !important;
+}
+
+.radioBar-bMNUI- path[fill] {
+	fill: #d59e68;
+}
+.radioIconForeground-XwlXQN {
+	color: white;
+	r:7;
 }
 
 .theme-dark .checked-3_4uQ9[style*="border-color: rgb(114, 137, 218);"] {
@@ -867,7 +966,7 @@
   border: 2px solid #4f5fe0;
 }
 .lookInverted-2D7oAl.colorBrand-3pXr91:hover {
-  background-color: #4f5fe0;
+  background-color: #4f5fe0 !important;
 }
 .lookInverted-2D7oAl.colorBrand-3pXr91 {
   color: white !important;
@@ -1170,7 +1269,8 @@
 }
 
 .theme-dark .jumpToPresentBar-G1R9s6,
-.theme-dark .newMessagesBar-265mhP button {
+.theme-dark .newMessagesBar-265mhP button,
+.container-2fRDfG {
   background-color: rgba(0,0,0,.9) !important;
 }
 
@@ -1316,9 +1416,13 @@
 .diversityEmojiItem-L6_IXw:hover {
   background-color:#d59e68;
 }
-.colorDefault-2K3EoJ .checkbox-3s5GYZ, 
-.colorDefault-2K3EoJ .radioSelection-1HmrQS {
+
+.colorDefault-2K3EoJ .checkbox-3s5GYZ {
   color: rgba(0, 0, 0, .26) !important;
+}
+
+.colorDefault-2K3EoJ .radioSelection-1HmrQS {
+	color: #ca9e73 !important;
 }
 
 .colorDefault-2K3EoJ.focused-3afm-j .check-1JyqgN {
@@ -2068,3 +2172,48 @@
 /* Main Color: #ca9e73 - 202, 159, 115 */
 /* Hover Color: #d59e68 - 213, 158, 104 */
 /* ---- */
+
+/* New Things Here */
+.tip-2ab612 {
+	opacity: 1;
+}
+.colorStandard-2KCXvj, .actionButton-uPB8Fs, .header-19cWci, .theme-dark .activityIcon-c4ew_N {
+	color: white;
+}
+
+.background-1QDuV2, .accountList-33MS45, .connection-1fbD7X {
+	background-color: rgba(0, 0, 0, .4);
+}
+
+.fieldList-21DyL8, .connectionHeader-2MDqhu, .integration-3kMeY4 {
+	background-color: transparent;
+}
+
+.phoneField-38N1bJ {
+	background-color: transparent;
+	border: none;
+}
+
+.phoneField-38N1bJ .inputField-aNPXsv {
+	background-color: transparent;
+	color: white;
+}
+
+.bda-slist .bda-footer button[style*="background-color: rgb(114, 137, 218);"] {
+	background: #ca9e73 !important;
+}
+
+.channelName-1JRO3C {
+	color: white;
+	background: transparent;
+}
+
+.searchResultMessage-1fxgXh.hit-1fVM9e {
+	box-shadow: none;
+	background-color: rgba(255,255,255,.2);
+}
+
+.integration-3kMeY4 {
+  background-color: transparent;
+}
+/* New Things Here */
